# arms

./: .eslintrc.json  .gitignore  README.md  Readme.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  pty.rs
src/components/Editor/: index.tsx
src/components/FileTree/: index.tsx
src/components/NavBar/: index.tsx
src/components/Terminal/: index.tsx
src/components/ToolBar/: index.tsx
src/components/WorkingPanel/: index.tsx
